Updated to compile and run.. but then doesn't do anything.. on 10.8.. or anything else for that matter.

--- a/Core/Environment/Info.plist
+++ b/Core/Environment/Info.plist
@@ -52,7 +52,14 @@
 	<key>NSSupportsAutomaticTermination</key>
 	<true/>
 	<key>UTExportedTypeDeclarations</key>
-	<array/>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>com.inquisitiveSoftware.Quartzite</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
+	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array/>
 </dict>
